--- a/css/styles.css
+++ b/css/styles.css
@@ -11,22 +11,21 @@ body, html {
 }
 
 .principal {
-    width: 95%;
+    width: 60%;
     margin: 0 auto;
-    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
 .navegacao {
-    width: 97%;
-    margin: 0 auto;
+    width: 100%;
     display: flex;
+    justify-content: space-between;
 }
 
 .banner {
-    width: 97%;
+    width:100%;
     padding: 1%;
     background-image: url(/assets/purple-string-lights-and-lamps-with-curtains-1042152.jpg);
     background-size: cover;
@@ -34,6 +33,7 @@ body, html {
     color: white;
     margin: 0 auto;
     height: 40%;
+    box-sizing: border-box;
 }
 
 .banner h1 {
@@ -42,9 +42,9 @@ body, html {
 }
 
 .menu {
-    width: 74%;
+    width: 86%;
     margin: 0 auto;
-    text-align: end;
+    text-align: right;
 }
 
 .menu nav ul li {
@@ -79,11 +79,13 @@ body, html {
 }
 
 .noticia-container {
-    width: 97%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
     height: 40%;
+    margin-top: 15px;
+    box-sizing: border-box;
 }
 
 .noticia h2 {
